--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body {
   border-radius: 10px;
   background:url("thanos-logo.png") white 15px no-repeat;
   background-size: 50px;
+  cursor: pointer;
 }
 .dust {
   position: absolute;
